force-app/main/default/objects/Diplomacy__c/Diplomacy__c.object-meta.xml
<CustomObject>
    <label>Diplomacy</label>
    <pluralLabel>Diplomacys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Diplomacy Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>