force-app/main/default/objects/Diplomacy__c/fields/Alliance__c.field-meta.xml
<CustomField>
    <fullName>Alliance__c</fullName>
    <label>Alliance</label>
    <type>Lookup</type>
    <referenceTo>Alliance__c</referenceTo>
    <relationshipName>Diplomacy_Alliance</relationshipName>
</CustomField>