force-app/main/default/objects/Diplomacy__c/fields/Casus_belli__c.field-meta.xml
<CustomField>
    <fullName>Casus_belli__c</fullName>
    <label>Casus belli</label>
    <type>Lookup</type>
    <referenceTo>Casus_belli__c</referenceTo>
    <relationshipName>Diplomacy_Casus_belli</relationshipName>
</CustomField>