force-app/main/default/objects/Diplomacy__c/fields/Substate__c.field-meta.xml
<CustomField>
    <fullName>Substate__c</fullName>
    <label>Substate</label>
    <type>Lookup</type>
    <referenceTo>Substate__c</referenceTo>
    <relationshipName>Diplomacy_Substate</relationshipName>
</CustomField>