force-app/main/default/objects/Diplomacy__c/fields/Vassal__c.field-meta.xml
<CustomField>
    <fullName>Vassal__c</fullName>
    <label>Vassal</label>
    <type>Lookup</type>
    <referenceTo>Vassal__c</referenceTo>
    <relationshipName>Diplomacy_Vassal</relationshipName>
</CustomField>